; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_cd-netbsd.c_NetBSDCDReadSectorFAD.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_cd-netbsd.c_NetBSDCDReadSectorFAD.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NetBSDCDReadSectorFAD.syncHdr = internal constant [16 x i32] [i32 0, i32 255, i32 255, i32 255, i32 255, i32 255, i32 255, i32 255, i32 255, i32 255, i32 255, i32 0, i32 0, i32 0, i32 0, i32 0], align 16
@hCDROM = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @NetBSDCDReadSectorFAD to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @NetBSDCDReadSectorFAD(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %6 = load i32, i32* @hCDROM, align 4
  %7 = icmp ne i32 %6, -1
  br i1 %7, label %8, label %21

8:                                                ; preds = %2
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @memcpy(i8* %9, i32* getelementptr inbounds ([16 x i32], [16 x i32]* @NetBSDCDReadSectorFAD.syncHdr, i64 0, i64 0), i32 64)
  %11 = load i32, i32* @hCDROM, align 4
  %12 = load i32, i32* %4, align 4
  %13 = sub nsw i32 %12, 150
  %14 = mul nsw i32 %13, 2048
  %15 = load i32, i32* @SEEK_SET, align 4
  %16 = call i32 @lseek(i32 %11, i32 %14, i32 %15)
  %17 = load i32, i32* @hCDROM, align 4
  %18 = load i8*, i8** %5, align 8
  %19 = getelementptr inbounds i8, i8* %18, i64 16
  %20 = call i32 @read(i32 %17, i8* %19, i32 2048)
  store i32 1, i32* %3, align 4
  br label %22

21:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %22

22:                                               ; preds = %21, %8
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @memcpy(i8*, i32*, i32) #1

declare dso_local i32 @lseek(i32, i32, i32) #1

declare dso_local i32 @read(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
